src/objects/CS_Community_Content__c.object
<CustomObject>
    <fields>
        <fullName>CS_Community__c</fullName>
        <label>Community</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Place</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CS_Content_description__c</fullName>
        <label>Content description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>R1C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3C3A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Modal_Content__c</fullName>
        <label>Modal Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CS_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Popup_Link__c</fullName>
        <label>Popup Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Publish_Status__c</fullName>
        <formula>IMAGE( 
CASE(CS_Status__c, 
&quot;Active&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Draft&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;Inactive&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
        <inlineHelpText>Publish Status</inlineHelpText>
        <label>Publish Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Rich_Content_Title__c</fullName>
        <label>Rich Content Title</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CS_Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CS_Title__c</columns>
        <columns>CS_Content_description__c</columns>
        <columns>CS_Community__c</columns>
        <columns>CS_Type__c</columns>
        <columns>CS_Sort_Order__c</columns>
        <columns>CS_Content__c</columns>
        <columns>CS_Publish_Status__c</columns>
        <columns>CS_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer</fullName>
        <columns>NAME</columns>
        <columns>CS_Title__c</columns>
        <columns>CS_Location__c</columns>
        <columns>CS_Content__c</columns>
        <columns>CS_Type__c</columns>
        <columns>CS_Community__c</columns>
        <columns>CS_Publish_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Community__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Customer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partner</fullName>
        <columns>NAME</columns>
        <columns>CS_Title__c</columns>
        <columns>CS_Location__c</columns>
        <columns>CS_Content__c</columns>
        <columns>CS_Type__c</columns>
        <columns>CS_Community__c</columns>
        <columns>CS_Publish_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Community__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>Partner</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Content-{00000}</displayFormat>
        <label>Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CommunityContent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>